--- a/logstashv2.conf
+++ b/logstashv2.conf
@@ -146,7 +146,7 @@ filter {
     mutate {
       add_field => {
         "dest_port" => "22"
-        "dest_ip" => "${MY_EXTIP}"
+        "dest_ip" => "$(hostname -I | awk '{print $1}')"
       }
     }
   }
@@ -175,7 +175,7 @@ filter {
         "src_ip" => "%{[addr][0]}"
         "src_port" => "%{[addr][1]}"
         "dest_port" => "6379"
-        "dest_ip" => "${MY_EXTIP}"
+        "dest_ip" => "$(hostname -I | awk '{print $1}')"
       }
       remove_field => ["addr"]
     }
@@ -188,7 +188,7 @@ filter {
   # Add host metadata
   mutate {
     add_field => {
-      "t-pot_ip_ext" => "${MY_EXTIP}"
+      "t-pot_ip_ext" => "$(hostname -I | awk '{print $1}')"
       "t-pot_ip_int" => "${MY_INTIP}"
       "t-pot_hostname" => "${MY_HOSTNAME}"
     }
@@ -212,6 +212,8 @@ output {
     index => "honeypot-%{+YYYY.MM.dd}"
     ssl => true
     ssl_certificate_verification => false
+    user => ""
+    password => ""
     template => "/etc/logstash/template.json"
     template_overwrite => true
   }
