--- a/logstashv2.conf
+++ b/logstashv2.conf
@@ -25,13 +25,13 @@ input {
   file { path => ["/data/citrixhoneypot/log/server.log"] codec => json type => "CitrixHoneypot" }
 
   # Conpot
-  file { path => ["/data/conpot/log/*.json"] codec => json type => "ConPot" }
+  file { path => ["/var/lib/docker/volumes/gridpot/_data/gridpot/conpot/conpot.json"] codec => json type => "ConPot" }
 
   # Cowrie
-  file { path => ["/data/cowrie/log/cowrie.json"] codec => json type => "Cowrie" }
+  file { path => ["/var/lib/docker/volumes/cowrie-var/_data/log/cowrie/cowrie.json"] codec => json type => "Cowrie" }
 
   # Dionaea
-  file { path => ["/data/dionaea/log/dionaea.json"] codec => json type => "Dionaea" }
+  file { path => ["/var/lib/docker/volumes/dionaea/_data/var/lib/dionaea/dionaea.log"] codec => json type => "Dionaea" }
 
   # Dicompot
   file { path => ["/data/dicompot/log/dicompot.log"] codec => json type => "Dicompot" }
@@ -70,7 +70,7 @@ input {
   file { path => ["/data/honeypots/log/*.log"] codec => json type => "Honeypots" }
 
   # Honeytrap
-  file { path => ["/data/honeytrap/log/attackers.json"] codec => json type => "Honeytrap" }
+  file { path => ["/opt/honeypot/honeytrap/log/attacker.log"] codec => json type => "Honeytrap" }
 
   # Ipphoney
   file { path => ["/data/ipphoney/log/ipphoney.json"] codec => json type => "Ipphoney" }
